--- a/appwrite.json
+++ b/appwrite.json
@@ -1,6 +1,6 @@
 {
   "$id": "unique()",
-  "projectId": "YOUR_PROJECT_ID",
+  "projectId": "6898051f002a1c79531b",
   "version": "1.0",
   "functions": [
     {
