--- a/functions/nazdone-scraper/package.json
+++ b/functions/nazdone-scraper/package.json
@@ -7,6 +7,6 @@
     "axios": "^1.7.2"
   },
   "scripts": {
-    "postinstall": "npx playwright install chromium"
+    "postinstall": "npx playwright install chromium chromium-headless-shell ffmpeg"
   }
 }
