--- a/functions/nazdone-scraper/package.json
+++ b/functions/nazdone-scraper/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "playwright": "^1.46.0"
+    "playwright-core": "^1.46.0",
+    "playwright-chromium": "^1.46.0"
   },
   "scripts": {
-    "postinstall": "PLAYWRIGHT_BROWSERS_PATH=0 npx playwright install chromium ffmpeg"
+    "postinstall": "PLAYWRIGHT_BROWSERS_PATH=0 npx playwright install chromium"
   }
 }
 
