--- a/functions/nazdone-scraper/package.json
+++ b/functions/nazdone-scraper/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "starter-template",
+  "name": "nazdone-scraper",
   "version": "1.0.0",
-  "description": "",
+  "description": "Scraper for fetching products from nazdone.com and adding to virma.ir",
   "main": "src/main.js",
   "type": "module",
   "scripts": {
     "format": "prettier --write ."
   },
   "dependencies": {
-    "node-appwrite": "^14.1.0"
+    "node-appwrite": "^14.1.0",
+    "playwright": "^1.45.0"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
   }
 }
+
