--- a/functions/nazdone-scraper/package.json
+++ b/functions/nazdone-scraper/package.json
@@ -5,14 +5,12 @@
   "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "format": "prettier --write ."
+    "postinstall": "npx playwright install chromium"
   },
   "dependencies": {
     "node-appwrite": "^14.1.0",
-    "playwright": "^1.45.0"
-  },
-  "devDependencies": {
-    "prettier": "^3.2.5"
+    "playwright-chromium": "^1.45.0"
   }
 }
+
 
