--- a/functions/nazdone-scraper/package.json
+++ b/functions/nazdone-scraper/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "main": "src/main.js",
   "dependencies": {
-    "@sparticuz/chromium": "^123.0.0",
-    "puppeteer-core": "^23.4.0"
+    "puppeteer": "^22.15.0"
   }
 }
+
 
 
 
